--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   video_player: ^2.2.11
   flutter_svg: ^1.0.3
   cached_network_image: ^3.2.0
+  intl: ^0.17.0
   
 
 dev_dependencies:
